# rocnet

./: LICENSE  Readme.md  pyproject.toml
src/rocnet/: data.py  dataset.py  file.py  model.py  octree.py  rocnet.py  tiler.py  train_torchfold.py  trainer.py  utils.py
